# SUSTech-EE368-Project

./: .gitignore  README.md
gomoku_ai/: CMakeLists.txt  package.xml
gomoku_ai/launch/: ai_node.launch
gomoku_ai/src/: ai_node.py  game.py  mcts_alphaZero.py  policy_value_net_numpy.py
gomoku_control/: CMakeLists.txt  package.xml
gomoku_control/launch/: pick_and_place_example.launch
gomoku_control/src/: control_node.py  control_win.py  pick_and_place_trajectories.py
gomoku_vision/: CMakeLists.txt  package.xml
gomoku_vision/scripts/: rec_visualization.py  show_hsv.py
gomoku_vision/src/: gomoku_board.py  gomoku_cv.py  planc.py  realsense.py  vision_node.py
