<?xml version="1.0"?>
<package format="2">
  <name>gomoku_ai</name>
  <version>0.0.1</version>
  <description>The gomoku_ai package</description>
  <maintainer email="user@domain.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
